argocd/hodu-prod/hodu-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hodu-server
  labels:
    app: hodu-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hodu-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: hodu-server
    spec:
      serviceAccountName: hodu
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/hodu/hodu-server:240812-1
          name: hodu-server
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hodu-server
spec:
  type: ClusterIP
  selector:
    app: hodu-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hodu-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - hodu-server
    - hodu.wafflestudio.com
  http:
    - route:
        - destination:
            host: hodu-server
